# kosztorysai

./: .dockerignore  .gitignore  AUDYT.md  C:\Users\Gabriel\Desktop\kosztorys_wygenerowany.ath  CHECKPOINT.md  Dockerfile  README.md  ROADMAP.md  __init__.py  __main__.py  ai_knr_matcher.py  ai_materials.py  ai_sprzet.py  ai_verifier.py  ath_generator.py  auth.py  build_database.py  calculator_engine.py  check_baza.py  check_specific.py  cli.py  database.py  db_validator.py  deploy.bat  exceptions.py  extract_all_naklady.py  extract_materialy_from_ath.py  extract_naklady_from_ath.py  extract_sprzet_from_ath.py  formatters.py  generate_ath.py  knr_matcher.py  kosztorys_generator.py  logger.py  merge_bazy.py  models.py  pdf_cache.py  pdf_generator_v2.py  price_validator.py  pyproject.toml  (+17 more)
archive/: START.bat  START_SERVER.bat  START_V2.bat  ai_engine.py  app.py  app_v2.py  brzeg_sanitariaty.py  brzeg_sanitariaty_v2.py  check_pdf.py  engine.py  engine_v2.py  knr_base.json  learn_from_pdfs.py  main.py  pdf_generator.py  pdf_parser.py  run_server.py
config/: ocr_patterns.json
docs/: ATH_FORMAT.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
knr_database/: analyze_format.py  analyze_knr_main.py  check_pdfs.py  extract_knr_main.py  extractor.py  extractor_v2.py  knr.db  schema.sql  stats.py
learned_kosztorysy/: 1. SIECIEBOROWICE BUDOWLANY DOPASOWA.txt  2. Małujowice koszorys sanitarny.txt  2. SIECIEBOROWICE KOSZTORYS SANITARNY.txt  3. SIECIEBOROWICE KOSZTORYS ELEKTRYCZNY.txt  3.KOSZTRYS OFERTOWY elektryczny.txt  analysis.json  (+9 more)
(+40 files in other folders)
